--- a/style.css
+++ b/style.css
@@ -47,10 +47,12 @@
 
 body{
     background-color: rgb(50, 48, 52);
+    background-color: rgb(255, 255, 255);
 }
 
 a{
     font-size: 2.1vh;
+    font-family: TiltNeon;
 }
 
 div{
@@ -194,7 +196,6 @@ h4{
     color: rgb(29, 28, 28);
 }
 
-
 .logo{
     position:fixed;
     top: 10px;
@@ -203,16 +204,10 @@ h4{
     height: 8vh;
     z-index: 100;
 }
-
 .ikona{
     float: left;
     height: 23px;
     margin-right: 8px;
-}
-
-.videjo{
-    margin-top: 20px;
-    margin-bottom: 20px;
 }
 
 .slikaDiv{
@@ -227,7 +222,7 @@ h4{
 .drzacDiv{
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
 }
 
 .kutija{    
@@ -245,10 +240,63 @@ h4{
     text-align: center;
 }
 
+.plavoDugme
+{
+font-family: Roboto, sans-serif;
+font-weight: 0;
+font-size: 14px;
+color: #fff;
+background-color: #0066CC;
+padding: 10px 30px;
+border: 2px solid #0066cc;
+box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+border-radius: 50px;
+transition : 1000ms;
+transform: translateY(0);
+display: flex;
+flex-direction: row;
+align-items: center;
+cursor: pointer;
+}
+
+.plavoDugme:hover
+{
+transition : 1000ms;
+padding: 10px 50px;
+transform : translateY(-0px);
+background-color: #fff;
+color: #0066cc;
+border: solid 2px #0066cc;
+}
+
+.container-bottom-to-up 
+{
+    overflow: hidden;
+    margin: 0px;
+    }
+    .top-to-bottom {
+    animation: 0.4s top-to-bottom forwards;
+    font-size: 24px;
+    font-weight: 600;
+    letter-spacing: -.005em;
+    font-family:
+    "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    color: rgba(0,0,0,0.8);
+    text-align: left;
+} 
+@keyframes top-to-bottom {
+from {
+transform: translateY(-48px);
+}
+to {
+transform: translateY(0);
+}
+}
+
 .slikaElement{
-    height: 25%;
-    margin-left: 25%;
-    margin-right: 25%;
+    height: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
     z-index: 100;
 }
 
