--- a/style.css
+++ b/style.css
@@ -60,8 +60,11 @@ div{
 }
 
 p{
-    text-align: center;
+    text-align: left;
     font-size: 30px;
+    font-size: 25px;
+    margin-bottom: 10px;
+    margin-left: 12px;   
 }
 
 h2{
@@ -75,8 +78,7 @@ h3{
     font-weight: bolder;
     font-size: 25px;
     margin-bottom: 10px;
-    margin-left: 12px;
-    
+    margin-left: 12px;   
 }
 
 h4{
