--- a/style.css
+++ b/style.css
@@ -90,6 +90,9 @@ h4{
     margin-bottom: 20px;
     display: inline-flexbox;
 }
+span{
+  font-size: 22px;
+}
 
 .menustrip
 {
@@ -365,9 +368,9 @@ transform: translateY(0);
 :root {
     --border: rgb(64, 173, 236);
     
-    --g1: rgb(64, 173, 236);
-    --g2: rgb(226, 167, 79);    
-    --g3: rgb(228, 150, 224);
+    --g1: rgb(228, 150, 224);/*
+    --g2: rgb(226, 167, 79);*/
+    --g3: rgb(64, 173, 236);
   }
   
   .card {
@@ -401,8 +404,8 @@ transform: translateY(0);
     background: linear-gradient(
       130deg, 
       transparent 0% 33%, 
-      var(--g1) 66%, 
-      var(--g2) 83.5%, 
+      var(--g1) 66%, /*
+      var(--g2) 83.5%, */
       var(--g3) 100%
     );
     background-position: 0% 0%;
